--- a/style.css
+++ b/style.css
@@ -11,5 +11,21 @@ article{
 h1{
     color: rgba(41, 41, 41, 1);
     font: 45px "Lora", serif;
-    margin: 0 0 0 0;
+    margin: 0 0 14px 0;
+}
+
+h2{
+    color: rgba(117, 117, 117, 1);
+    font: 600 20px "Open Sans", sans-serif;
+}
+
+img{
+    width: 100%;
+    height: 700px;
+}
+
+figcaption{
+    text-align: center;
+    color: rgba(117, 117, 117, 1);
+    margin: 7px 0 0 0;
 }
