--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ article{
 
 h1{
     color: rgba(41, 41, 41, 1);
-    font: 45px "Lora", serif;
-    margin: 0 0 14px 0;
+    font: 43px "Lora", serif;
+    margin: 0 0 12px 0;
 }
 
 h2{
@@ -28,4 +28,16 @@ figcaption{
     text-align: center;
     color: rgba(117, 117, 117, 1);
     margin: 7px 0 0 0;
+}
+
+.parte1 h2{
+    color: rgb(31, 31, 31);
+    font: 600 30px "Open Sans", sans-serif;
+    margin: 50px 0 10px 0;
+}
+
+.parte1 p {
+    color: rgba(41, 41, 41, 1);
+    font: 20px/32px "Lora", serif;
+    margin: 0 0 30px 0;
 }
