--- a/style.css
+++ b/style.css
@@ -41,3 +41,8 @@ figcaption{
     font: 20px/32px "Lora", serif;
     margin: 0 0 30px 0;
 }
+
+.parte1 a{
+    color: rgb(60, 60, 131);
+    font: 20px/32px "Lora", serif;
+}
